@@ -929,7 +929,7 @@ const CalcFncts calc_73 =
 	N_("TI-73"),
 	OPS_ISREADY | OPS_KEYS | OPS_SCREEN | OPS_DIRLIST | OPS_BACKUP | OPS_VARS | 
 	OPS_FLASH | OPS_IDLIST | OPS_ROMDUMP | OPS_VERSION | OPS_OS |
-	FTS_SILENT | FTS_MEMFREE | FTS_FLASH,
+	FTS_SILENT | FTS_MEMFREE | FTS_FLASH | FTS_BACKUP,
 	&is_ready,
 	&send_key,
 	&recv_screen,
@@ -963,7 +963,7 @@ const CalcFncts calc_83p =
 	N_("TI-83 Plus"),
 	OPS_ISREADY | OPS_KEYS | OPS_SCREEN | OPS_DIRLIST | OPS_BACKUP | OPS_VARS | 
 	OPS_FLASH | OPS_IDLIST | OPS_ROMDUMP | OPS_CLOCK | OPS_DELVAR | OPS_VERSION | OPS_OS |
-	FTS_SILENT | FTS_MEMFREE | FTS_FLASH | FTS_CERT,
+	FTS_SILENT | FTS_MEMFREE | FTS_FLASH | FTS_CERT | FTS_BACKUP,
 	&is_ready,
 	&send_key,
 	&recv_screen,
@@ -997,7 +997,7 @@ const CalcFncts calc_84p =
 	N_("TI-84 Plus"),
 	OPS_ISREADY | OPS_KEYS | OPS_SCREEN | OPS_DIRLIST | OPS_BACKUP | OPS_VARS | 
 	OPS_FLASH | OPS_IDLIST | OPS_ROMDUMP | OPS_CLOCK | OPS_DELVAR | OPS_VERSION | OPS_OS |
-	FTS_SILENT | FTS_MEMFREE | FTS_FLASH | FTS_CERT,
+	FTS_SILENT | FTS_MEMFREE | FTS_FLASH | FTS_CERT | FTS_BACKUP,
 	&is_ready,
 	&send_key,
 	&recv_screen,
